# toolbelt

./: README.md
git_hooks/: pre_commit-yaml_lint
regolith_looks/: README.md  Taskfile.yml
regolith_looks/bearden-dark/: root  typeface
regolith_looks/bearden-light/: root
scripts/: convert_vtc.py  personal_github  stub_vtc.py  ydiff.py
snippets/: argparse_bool_action_override.py
tests/: test_convert_vtc.bats
tests/convert_vtc/: expected-with-comment.tavern.yaml  expected.tavern.yaml  test_cfg.vtc
theme_switcher/: pyproject.toml
theme_switcher/src/theme_switcher/: cache.py  cli.py  config.py  main.py  regolith.py  sublime.py  terminal.py
